Initial complete project

--- a/content/blog/20241206.md
+++ b/content/blog/20241206.md
@@ -1,11 +1,15 @@
 +++
-title = "Adjustable Nozzle Ring for Radial Turbine"
-date = "2025-02-26"
-description = "Software Function Introduction."
-image = "/img/blog/software_tool.png"
+author = "TaiZe"
+title = "TaiZe's New Product RomTides is Grandly Launched"
+date = "2024-12-06"
+description = "TaiZe's New Product Launch"
+image = "/img/blog/20241206.png"
 hide_featured_image = true
-tags = ["TurboTides", "FloTides", "OpTides", "SeniorWorks", "OASIS", "FEM"]
+tags = ["RomTides", "Docs", "Video"]
 +++
+
+An Intelligent Data Modeling and Model Order Reduction Platform for Industrial Digitalization. <!--more--> 
+
 
 The adjustable nozzle ring is an essential component in a radial turbine. It directs the high-temperature, high-pressure airflow from the upstream components into the impeller at a specific angle, imparting a certain circumferential velocity to the impeller.
 
