--- a/content/blog/20240925-2.md
+++ b/content/blog/20240925-2.md
@@ -1,9 +1,9 @@
 +++
-author = "Hugo Authors"
-title = "The Fatigue/Crack Propagation Analysis Product Launch"
-date = "2019-02-26"
+author = "TaiZe"
+title = "Generalized Fluid-Structure Integrated Design, Simulation, and Optimization System OpTides"
+date = "2024-09-25"
 description = "A brief description of Hugo Shortcodes"
-image = "/img/blog/custom_development.png"
+image = "/img/blog/20240925-2.png"
 tags = [
     "shortcodes",
     "privacy",
