--- a/content/blog/20230714.md
+++ b/content/blog/20230714.md
@@ -1,6 +1,6 @@
 +++
 author = "TaiZe"
-title = "TurboTides Technology Made an Appearance at the 3rd China Intelligent Oil and Gas Pipeline Conference"
+title = "Made an Appearance at the Intelligent Oil and Gas Pipeline Conference"
 date = "2023-07-14"
 description = "TaiZe"
 image = "/img/blog/20230714.png"
