--- a/content/blog/20240628.md
+++ b/content/blog/20240628.md
@@ -2,7 +2,7 @@
 author = "Taize"
 title = "Tai Ze 2024 Technology Exchange Series: GO ON!"
 date = "2024-06-28"
-description = "Lorem Ipsum Dolor Si Amet"
+description = "Taize"
 image = "/img/blog/20240628.png"
 tags = [
     "markdown",
