--- a/content/blog/20240712.md
+++ b/content/blog/20240712.md
@@ -1,8 +1,8 @@
 +++
 author = "Taize"
-title = "TaiZe Technology: Aerodynamic Design of Integral Gear Compressors Based on Turbotides"
+title = "Aerodynamic Design of Integral Gear Compressors Based on Turbotides"
 date = "2024-07-12"
-description = "Lorem Ipsum Dolor Si Amet"
+description = "Taize"
 image = "/img/blog/20240712.png"
 tags = [
     "markdown",
