--- a/content/blog/20240925.md
+++ b/content/blog/20240925.md
@@ -1,8 +1,8 @@
 +++
 author = "Taize"
-title = "Pipeline Network Modeling of Low-Temperature Water Systems Based on FloTides"
+title = "Low-Temperature Water Systems Based on FloTides"
 date = "2024-09-25"
-description = "Lorem Ipsum Dolor Si Amet"
+description = "Taize"
 image = "/img/blog/20240925.png"
 tags = [
     "markdown",
