--- a/content/blog/20240925-2.md
+++ b/content/blog/20240925-2.md
@@ -1,8 +1,8 @@
 +++
 author = "TaiZe"
-title = "Generalized Fluid-Structure Integrated Design, Simulation, and Optimization System OpTides"
+title = "Generalized Design, Simulation, and Optimization System OpTides"
 date = "2024-09-25"
-description = "A brief description of Hugo Shortcodes"
+description = "Taize"
 image = "/img/blog/20240925-2.png"
 tags = [
     "shortcodes",
